# parq2ice

./: Cargo.toml  README.md
src/: convert.rs  error.rs  kerchunk.rs  lib.rs  zmetadata.rs
